fix for overflow-x: hidden not working on mobile; justify .general_text on smaller screens

--- a/css/1200.css
+++ b/css/1200.css
@@ -6,6 +6,7 @@
   .general_text {
     line-height: 38px;
     width: 55vw;
+    text-align: justify;
   }
 
   #what_we_do h1 {
