--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html {
   font-size: 10px;
-  overflow-x: hidden;
 }
 
 body {
@@ -8,6 +7,10 @@ body {
   color: #000;
   font-family: 'Source Sans Pro', sans-serif;
   margin: 0 14px 0 14px;
+}
+
+div.overflow_wrapper {
+  overflow-x: hidden;
 }
 
 section {
